# the-rust-programming-language

./: .gitignore
.cargo/: config.toml
01/02/hello_world/: main.rs
01/03/: README.md
02/guessing_game/: README.md
03-common-programming-concepts/: README.md
03-common-programming-concepts/01-variables-mutability/: README.md
03-common-programming-concepts/02-data-types/: README.md
03-common-programming-concepts/3-3-functions/: README.md
03-common-programming-concepts/3-4-comments/: README.md
03-common-programming-concepts/3-5-control-flow/: README.md
04-understanding-ownership/: README.md
04-understanding-ownership/4-1-what-is-ownership/: README.md
06-enums/: README.md
06-enums/6-1-defining-enums/: README.md
06-enums/6-2-match/: README.md
06-enums/6-3-if-let/: README.md
07-packages-crates-modules/: README.md
08-common-collections/: README.md
08-common-collections/8-1-vectors/: README.md
08-common-collections/8-2-strings/: README.md
08-common-collections/8-3-hash-maps/: README.md
09-error-handling/: README.md
09-error-handling/9-1-panic/: README.md
09-error-handling/9-1-panic/crates/panic/: Cargo.toml
09-error-handling/9-1-panic/crates/panic/src/: main.rs
09-error-handling/9-2-result/: README.md
09-error-handling/9-3-panic-or-not/: README.md
10-generics-traits-lifetimes/: README.md
10-generics-traits-lifetimes/10-1-generic-data-types/: README.md
10-generics-traits-lifetimes/10-2-traits/: README.md
11-automated-tests/: README.md
12-io-cli-program/: README.md
13-functional-language-features/: README.md
(+122 files in other folders)
